Documentation edits made through Mintlify web editor

--- a/booking-management/schedule-setting.mdx
+++ b/booking-management/schedule-setting.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Dịch vụ'
 description: 'Hướng dẫn quản lý danh mục và dịch vụ trong hệ thống.'
-icon: "receipt"
+icon: "calendar-pen"
 ---
 
 ## **Danh mục dịch vụ**
