Documentation edits made through Mintlify web editor

--- a/app-builder/builder/design-app/drag-drop-component.mdx
+++ b/app-builder/builder/design-app/drag-drop-component.mdx
@@ -12,7 +12,13 @@ Người dùng nhấn giữ biểu tượng <Icon icon="grid" color="#cfcfcf" si
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image115_2cd69e118f.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -40px" 
+    }}
     title=""
   />
 </Frame>
@@ -23,7 +29,13 @@ Người dùng nhấn giữ biểu tượng <Icon icon="grid" color="#cfcfcf" si
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image226_1a9c067885.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -40px" 
+    }}
     title=""
   />
 </Frame>
@@ -38,7 +50,13 @@ Người dùng có thể nhấn vào nút <Icon icon="eye" color="#cfcfcf" size=
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image133_08984e759a.png"
     alt="Icon được khoanh tròn"
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -40px" 
+    }}
   />
 </Frame>
 
@@ -52,7 +70,13 @@ Người dùng có thể nhấn vào nút <Icon icon="eye" color="#cfcfcf" size=
       <img
         src="https://aimini-upload.sgp1.digitaloceanspaces.com/image140_2830b31ad0.png"
         alt="Nút xóa phần tử trong giao diện chỉnh sửa"
-        style={{ borderRadius:"0.5rem" }}
+        style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -40px" 
+    }}
         title="Nút xóa phần tử"
       />
     </Frame>
@@ -64,7 +88,13 @@ Người dùng có thể nhấn vào nút <Icon icon="eye" color="#cfcfcf" size=
       <img
         src="https://aimini-upload.sgp1.digitaloceanspaces.com/image81_04468588f3.png"
         alt="Nút Xóa ngay và Hủy trong cửa sổ xác nhận"
-        style={{ borderRadius:"0.5rem" }}
+        style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -40px" 
+    }}
         title="Nút xác nhận xóa"
       />
     </Frame>
