--- a/app-builder/builder/design-app/navigation-bar.mdx
+++ b/app-builder/builder/design-app/navigation-bar.mdx
@@ -19,7 +19,13 @@ Người dùng có thể thao tác với **thanh điều hướng (Navigation Ba
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image570_ba08464394.png"
     alt="Giao diện thanh Navigation Bar trong bảng quản trị"
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title="Giao diện Navigation Bar"
   />
 </Frame>
@@ -36,7 +42,13 @@ Người dùng có thể thao tác với **thanh điều hướng (Navigation Ba
       <img
         src="https://aimini-upload.sgp1.digitaloceanspaces.com/image571_56c21bd7c7.png"
         alt="Nút thêm trang mới trong giao diện Navigation Bar"
-        style={{ borderRadius:"0.5rem" }}
+        style={{
+          borderRadius: "0.5rem",
+          width: "100%",
+          height: "auto",
+          objectFit: "cover",
+          objectPosition: "0 -38px" 
+        }}
         title="Nút thêm trang mới"
       />
     </Frame>
@@ -50,7 +62,13 @@ Người dùng có thể thao tác với **thanh điều hướng (Navigation Ba
       <img
         src="https://aimini-upload.sgp1.digitaloceanspaces.com/image572_0f111020ca.png"
         alt="Form nhập thông tin trang trong Navigation Bar"
-        style={{ borderRadius:"0.5rem" }}
+        style={{
+          borderRadius: "0.5rem",
+          width: "100%",
+          height: "auto",
+          objectFit: "cover",
+          objectPosition: "0 -38px" 
+        }}
         title="Form nhập thông tin trang mới"
       />
     </Frame>
@@ -62,7 +80,13 @@ Người dùng có thể thao tác với **thanh điều hướng (Navigation Ba
       <img
         src="https://aimini-upload.sgp1.digitaloceanspaces.com/image573_866e298ade.png"
         alt="Xác nhận thêm trang mới trong Navigation Bar"
-        style={{ borderRadius:"0.5rem" }}
+        style={{
+          borderRadius: "0.5rem",
+          width: "100%",
+          height: "auto",
+          objectFit: "cover",
+          objectPosition: "0 -38px" 
+        }}
         title="Xác nhận thêm trang"
       />
     </Frame>
@@ -81,7 +105,13 @@ Người dùng có thể thao tác với **thanh điều hướng (Navigation Ba
       <img
         src="https://aimini-upload.sgp1.digitaloceanspaces.com/image574_eea98aac07.png"
         alt="Thay đổi vị trí các trang trên Navigation Bar"
-        style={{ borderRadius:"0.5rem" }}
+        style={{
+          borderRadius: "0.5rem",
+          width: "100%",
+          height: "auto",
+          objectFit: "cover",
+          objectPosition: "0 -38px" 
+        }}
         title="Kéo thả vị trí trang"
       />
     </Frame>
@@ -100,7 +130,13 @@ Người dùng có thể thao tác với **thanh điều hướng (Navigation Ba
       <img
         src="https://aimini-upload.sgp1.digitaloceanspaces.com/image575_c9877f4a9b.png"
         alt="Nút chỉnh sửa trang trên Navigation Bar"
-        style={{ borderRadius:"0.5rem" }}
+        style={{
+          borderRadius: "0.5rem",
+          width: "100%",
+          height: "auto",
+          objectFit: "cover",
+          objectPosition: "0 -38px" 
+        }}
         title="Chỉnh sửa trang"
       />
     </Frame>
@@ -114,7 +150,13 @@ Người dùng có thể thao tác với **thanh điều hướng (Navigation Ba
       <img
         src="https://aimini-upload.sgp1.digitaloceanspaces.com/image576_1b87269328.png"
         alt="Form chỉnh sửa dữ liệu Navigation Bar"
-        style={{ borderRadius:"0.5rem" }}
+        style={{
+          borderRadius: "0.5rem",
+          width: "100%",
+          height: "auto",
+          objectFit: "cover",
+          objectPosition: "0 -38px" 
+        }}
         title="Chỉnh sửa dữ liệu trang"
       />
     </Frame>
@@ -126,7 +168,13 @@ Người dùng có thể thao tác với **thanh điều hướng (Navigation Ba
       <img
         src="https://aimini-upload.sgp1.digitaloceanspaces.com/image577_43413dd6a4.png"
         alt="Lưu hoặc hủy chỉnh sửa trang"
-        style={{ borderRadius:"0.5rem" }}
+        style={{
+          borderRadius: "0.5rem",
+          width: "100%",
+          height: "auto",
+          objectFit: "cover",
+          objectPosition: "0 -38px" 
+        }}
         title="Lưu chỉnh sửa"
       />
     </Frame>
@@ -145,7 +193,13 @@ Người dùng có thể thao tác với **thanh điều hướng (Navigation Ba
       <img
         src="https://aimini-upload.sgp1.digitaloceanspaces.com/image578_da468b4797.png"
         alt="Nút xóa trang trong Navigation Bar"
-        style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}        
         title="Nút xóa trang"
       />
     </Frame>
@@ -157,7 +211,13 @@ Người dùng có thể thao tác với **thanh điều hướng (Navigation Ba
       <img
         src="https://aimini-upload.sgp1.digitaloceanspaces.com/image679_a8b7107cd0.png"
         alt="Xác nhận xóa trang trong Navigation Bar"
-        style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}        
         title="Xác nhận xóa"
       />
     </Frame>
@@ -176,7 +236,13 @@ Người dùng có thể thao tác với **thanh điều hướng (Navigation Ba
       <img
         src="https://aimini-upload.sgp1.digitaloceanspaces.com/image580_d071e0b5d3.png"
         alt="Các mẫu Navigation Bar có sẵn"
-        style={{ borderRadius:"0.5rem" }}
+        style={{
+          borderRadius: "0.5rem",
+          width: "100%",
+          height: "auto",
+          objectFit: "cover",
+          objectPosition: "0 -38px" 
+        }}        
         title="Danh sách mẫu Navigation Bar"
       />
     </Frame>
@@ -188,7 +254,13 @@ Người dùng có thể thao tác với **thanh điều hướng (Navigation Ba
       <img
         src="https://aimini-upload.sgp1.digitaloceanspaces.com/image581_3df9e7021c.png"
         alt="Thay đổi mẫu thanh Navigation Bar"
-        style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}        
         title="Thay đổi mẫu Navigation Bar"
       />
     </Frame>
